[tool.poetry]
name = "launchpad"
version = "0.1.0"
description = "Tasks orchestration tool based on temporalio"
authors = ["romain viry <rom88.viry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
temporalio = "^1.6.0"
attrs = "^23.2.0"
sanic = "^23.12.1"
sanic-ext = "^23.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
