[tool.poetry]
name = "launchpad"
version = "0.1.0"
description = "Tasks orchestration tool based on temporalio"
authors = ["romain viry <rom88.viry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
temporalio = "^1.6.0"
attrs = "^23.2.0"
sanic = "^23.12.1"
sanic-ext = "^23.12.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "==6.2.5"
pytest-cov = "^3.0.0"
commitizen = "^2.27.1"
yamllint = "^1.35.1"
ruff = "^0.2.2"
safety = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--no-header -l --cov launchpad -m 'not running_server'"

testpaths = [
    "tests"
]

[tool.coverage.run]
omit = [
    "tests/*",
]